--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: decla_time
-description: ""
+description: "An app for keeping track of your short-term rentals."
 
 
 # The following line prevents the package from being accidentally published to
