--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,12 +21,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   internet_connection_checker: ^1.0.0+1
   path_provider: ^2.1.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.0
   test: ^1.24.9
 
 flutter:
