--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,14 +14,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: any
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  # cupertino_icons: ^1.0.2
+
   internet_connection_checker: ^1.0.0+1
   path_provider: ^2.1.2
-  intl: ^0.19.0
+  shared_preferences: ^2.2.2
+  provider: ^6.1.1
+  
+
 
 dev_dependencies:
   flutter_test:
@@ -31,8 +38,8 @@ dev_dependencies:
   test: ^1.24.9
 
 flutter:
-
   uses-material-design: true
+  generate: true
 
   fonts:
     - family: Do Hyeon
