--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   path_provider: ^2.1.2
   shared_preferences: ^2.2.2
   provider: ^6.1.1
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
   
 
 
@@ -36,6 +38,8 @@ dev_dependencies:
 
   flutter_lints: ^3.0.0
   test: ^1.24.9
+  isar_generator: ^3.1.0+1
+  build_runner: ^2.4.8
 
 flutter:
   uses-material-design: true
