--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
   file_picker: ^6.1.1
+  url_launcher: ^6.2.4
   
 
 
@@ -45,6 +46,11 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   generate: true
+
+
+  assets:
+    - "assets/images/airbnb_instructions/"
+    - "assets/images/booking_com_instructions/"
 
   fonts:
     - family: Do Hyeon
