--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,14 +23,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   # cupertino_icons: ^1.0.2
 
-  internet_connection_checker: ^1.0.0+1
-  path_provider: ^2.1.2
   shared_preferences: ^2.2.2
+  path_provider: ^2.1.2
   provider: ^6.1.1
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
   file_picker: ^6.1.1
   url_launcher: ^6.2.4
+  desktop_drop: ^0.4.4
   
 
 
