--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@ tests/declaration_tests/random.txt
 lib/declarations/database/declaration.g.dart
 lib/reservations/reservation.g.dart
 lib/declarations/database/finalized_declaration_details.g.dart
+lib/declarations/database/user/property.g.dart
+lib/declarations/database/user/user.g.dart
