--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -34,10 +34,9 @@ linter:
     - prefer_double_quotes
     - require_trailing_commas
     - unawaited_futures
-
+    - directives_ordering
 
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
-
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
