--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,14 @@
 name: decla_time
 description: "An app for keeping track of your short-term rentals."
 
-
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: ">=3.2.3 <4.0.0"
 
 dependencies:
   flutter:
@@ -17,7 +16,6 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: any
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -32,8 +30,7 @@ dependencies:
   url_launcher: ^6.2.4
   desktop_drop: ^0.4.4
   http: ^1.2.0
-  
-
+  fl_chart: ^0.67.0
 
 dev_dependencies:
   flutter_test:
@@ -48,16 +45,14 @@ flutter:
   uses-material-design: true
   generate: true
 
-
   assets:
     - "assets/images/airbnb_instructions/"
     - "assets/images/booking_com_instructions/"
 
   fonts:
-    - family: Do Hyeon
+    - family: DelaGothicOne
       fonts:
-        - asset: fonts/DoHyeon-Regular.ttf
-    - family: Ysabeau
+        - asset: fonts/DelaGothicOne-Regular.ttf
+    - family: NanumGothic
       fonts:
-        - asset: fonts/Ysabeau-Regular.ttf
-  
+        - asset: fonts/NanumGothic-Regular.ttf
