initialized a reservation_place class  so that we add reservations to specific places so that we group them easier, especially when it comes to declaring them later..

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ lib/declarations/database/finalized_declaration_details.g.dart
 lib/declarations/database/user/property.g.dart
 lib/declarations/database/user/user.g.dart
 lib/declarations/database/user/user_property.g.dart
+lib/reservations/reservation_place.g.dart
