--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,5 @@ lib/declarations/database/user/property.g.dart
 lib/declarations/database/user/user.g.dart
 lib/declarations/database/user/user_property.g.dart
 lib/reservations/reservation_place.g.dart
+
+declaTimeScreenshots
